--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js ",
+    "test-watch": "nodemon --exec 'npm run test'"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,10 @@
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^5.2.0",
+    "supertest": "^3.1.0"
+  },
   "description": ""
 }
