--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test-watch": "nodemon --exec 'npm run test'"
   },
   "engines": {
-    "node": "8.9.4"
+    "node": "8.9.4",
+    "npm": "5.6.0"
   },
   "author": "",
   "license": "ISC",
